Fixes CodeMirror ScrollBars

--- a/site/_css/codemirror.less
+++ b/site/_css/codemirror.less
@@ -178,15 +178,8 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
   z-index: 6;
   display: none;
 }
-.CodeMirror-vscrollbar {
-  right: 0; top: 0;
-  overflow-x: hidden;
-  overflow-y: scroll;
-}
-.CodeMirror-hscrollbar {
-  bottom: 0; left: 0;
-  overflow-y: hidden;
-  overflow-x: scroll;
+.CodeMirror-scroll {
+  overflow: hidden;
 }
 .CodeMirror-scrollbar-filler {
   right: 0; bottom: 0;
